# personal-gpt

./: README.md  pyproject.toml
chat_tui/: __init__.py  chat.py
data/: tokenizer.json
data/processed/: lovecraft_train.txt  lovecraft_val.txt  mixed_train.txt  mixed_val.txt  wilde_train.txt  wilde_val.txt
data/raw/lovecraft/: at_the_mountains_of_madness.txt  the_colour_out_of_space.txt  the_whisperer_in_darkness.txt
data/raw/wilde/: an_ideal_husband.txt  lady_windermeres_fan.txt  salome.txt  the_canterville_ghost.txt  the_happy_prince_and_other_tales.txt
src/: chat.py  config.py  dataset.py  generate.py  model.py  train.py  train_tokenizer.py
src/mygpt/: download.py  process.py
