[project]
name = "gothic-dandy-slm"
version = "0.1.0"
description = "A ~35M parameter language model trained on Wilde and Lovecraft"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gothic Dandy", email = "gothic@dandy.ai"}
]
dependencies = [
    "torch>=2.1.0",
    "tokenizers>=0.15.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gothic-tokenize = "src.train_tokenizer:main"
gothic-train = "src.train:main"
gothic-generate = "src.generate:main"
gothic-tui = "chat_tui.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "chat_tui"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
python-preference = "only-system"
